--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
 
     <section class="second-banner">
         <div class="half-width">
-
+            <img src="images/myprofilepic3.png" alt="">
         </div>
-        <div class="half-width">
-
+        <div id="second-banner-text" class="half-width">
+            <h1>Biography</h1>
+            <p>I am a web developer. I am a world class web developer. I am still learning. I would like to learn more. Then I will be able to develop any kind of website according to your desire. So, bare with me, stay with me, give me some time and then I will give you a fully featured world class professional website for your own as well as for your company.</p>
+            <a class="link-button" target="_blank" href="https://github.com/nafis195">MY WORKS</a>
         </div>
+
     </section>
 
     <section class="third-banner">
