--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
             <p>I am a web developer. I am a world class web developer. I am still learning. I would like to learn more. Then I will be able to develop any kind of website according to your desire. So, bare with me, stay with me, give me some time and then I will give you a fully featured world class professional website for your own as well as for your company.</p>
             <a class="link-button" target="_blank" href="https://github.com/nafis195">MY WORKS</a>
         </div>
-
     </section>
 
     <section class="third-banner">
-        <div>
-
+        <h2 id="third-h2">My Latest Work</h2>
+        <div id="third-image" class="third-width">
+            <img src="images/work-3.jpg" alt="">
+        </div>
+        <div class="third-width">
+            <img src="images/work-2.jpg" alt="">
+        </div>
+        <div class="third-width">
+            <img src="images/work-1.png" alt="">
         </div>
     </section>
 
