--- a/index.html
+++ b/index.html
@@ -45,9 +45,21 @@
     </section>
 
     <section class="fourth-banner">
-        <div>
-
+        <div class="fourth-width">
+            <h1>What Client Are Say</h1>
+            <h3>Robert Bruce</h3>
+            <h4>Founder & CEO Alies</h4>
+            <h2>"Loren Ipsum is simply dummy text of the</h2>
+            <h2 id="second-h2" >printing and typesetting industry. Loren Ipsum"</h2>
+        </div>
+        <div class="last-button">
+            <h3>Leave me a message in the</h4>
+            <h1>nafischowdhury@email.com</h1>
         </div>
     </section>
 </body>
+
+<footer>
+    <h5>Nafis Chowdhury Initiative. © 2020 All Rights Reverved</h5>
+</footer>
 </html>
